# TopicTreeSeg

./: README.md  TODO.md  pyproject.toml
tests/: test_embeddings.py  test_ollama.py  test_openai.py  test_treeseg.py
treeseg/: openai.py
