[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topic_treeseg"
version = "0.1.0"
description = "Hierarchical Topic Segmentation of Large Transcripts using Embeddings"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = ["topic segmentation", "nlp", "embeddings", "hierarchical clustering"]
authors = [
  {name = "Gerald Hewes / Self", email = "gerald@geraldthewes.org"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: General",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy",
  "structlog",
  "pydantic",
  "ollama",
  "openai",
  "aiohttp"
]

[project.optional-dependencies]
visualization = [
  "matplotlib"
]
dev = [
  "matplotlib" 
  # Potentially add linters, test runners like pytest here later
]

[project.urls]
"Homepage" = "https://github.com/geraldthewes/TopicTreeSeg" 
"Bug Tracker" = "https://github.com/geraldthewes/TopicTreeSeg/issues" 
"Documentation" = "https://github.com/geraldthewes/TopicTreeSeg#readme"
"Source Code" = "https://github.com/geraldthewes/TopicTreeSeg" 
"Original Paper" = "https://arxiv.org/abs/2407.12028"
"Original Repo" = "https://github.com/AugmendTech/treeseg"
